# bugbot

./: Cargo.toml  Dockerfile  README.md
src/: env.rs  github.rs  main.rs  parse.rs  people.rs
src/github/: api.rs  mod.rs  repo.rs
