[package]
name = "bugbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.8"
hyper = "0.14.24"
slack-morphism = { version = "1.6.0", features=["hyper"] }
tokio = {version="1.25.0", features=["full"]}
tracing = "0.1.37"
tracing-subscriber = { version ="0.3", features = ["env-filter"] }
